Home page reg form alignment Marital status alignment in my profile and view detail Admin Active status and Delete status and admin type color differentiate in customer user and administration pages Quick registration Placeholder correction for dull font. Success stories Title missing.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2384,7 +2384,7 @@ p2
   border: 1px solid #e0e0e0;
   border-radius: 3px;
   position: relative;
-  top:12px;
+  top:6px;
 }
 
 .registration_form_area .registration_form_s h4 {
@@ -2393,7 +2393,7 @@ p2
   font-weight: bold;
   font-size: 30px;
   color: #2f3c44;
-  padding: 10px 0px 10px 0px;
+  padding: 4px 0px 4px 0px;
 }
 
 .registration_form_area .registration_form_s .form-group {
@@ -2420,30 +2420,29 @@ p2
 
 .registration_form_area .registration_form_s .form-group input.placeholder {
   font-size: 16px;
-  color: #334249;
+  color: #ccc;
   font-family: "Ubuntu", sans-serif;
-  font-weight: 500;
+  font-weight: 300;
 }
-
 .registration_form_area .registration_form_s .form-group input:-moz-placeholder {
   font-size: 16px;
-  color: #334249;
+  color: #ccc;
   font-family: "Ubuntu", sans-serif;
-  font-weight: 500;
+  font-weight: 300;
 }
 
 .registration_form_area .registration_form_s .form-group input::-moz-placeholder {
   font-size: 16px;
-  color: #334249;
+  color: #ccc;
   font-family: "Ubuntu", sans-serif;
-  font-weight: 500;
+  font-weight: 300;
 }
 
 .registration_form_area .registration_form_s .form-group input::-webkit-input-placeholder {
   font-size: 16px;
-  color: #334249;
+  color: #ccc;
   font-family: "Ubuntu", sans-serif;
-  font-weight: 500;
+  font-weight: 300;
 }
 
 .registration_form_area .registration_form_s .form-group input:focus {
@@ -2518,7 +2517,7 @@ p2
 
 .registration_form_area .registration_form_s .form-group.reg_chose {
   text-align: center;
-  margin: 10px 0px 20px 0px;
+  margin: 0px 0px 7px 0px;
 }
 
 /* End Main slider area css
@@ -8443,7 +8442,7 @@ p{
 .det_border{
   border: 1px solid #ccc !important;
     outline: 0 !important;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(231, 76, 60, 0.6) !important;
+    /*-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(231, 76, 60, 0.6) !important;*/
     box-shadow: inset 0 1px 1px rgba(204, 204, 204,0.075), 0 0 13px rgba(204, 204, 204, 1.6)!important;
 }
 .scrol{
